<resources>
    <string name="app_name">SummerPrac22</string>
    <string name="name">name</string>
    <string name="high">high</string>
    <string name="height">height</string>
    <string name="weight">weight</string>
    <string name="age">age</string>
    <string name="calculate">Calculate</string>
    <string name="result">hello</string>
    <string name="calculate_kkal">Calculate kkal</string>
</resources>